# paraphrase

./: .gitmodules  LICENSE  README.md
source_linux/: CMakeLists.txt  README.md  config.conf
source_windows/: CMakeLists.txt  config.conf  main.cpp
